examples/fail/lexer/bad_character.bina
// EXPECT_LEXER_ERROR: unexpected character
fn main() -> int {
    let x = @;
    return 0;
}
